@@ -1,32 +1,0 @@
-/*
- * Copyright (c) Zmanda, Inc.  All Rights Reserved.
- *
- * This library is free software; you can redistribute it and/or modify it
- * under the terms of the GNU Lesser General Public License version 2.1
- * as published by the Free Software Foundation.
- *
- * This library is distributed in the hope that it will be useful, but
- * WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
- * or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public
- * License for more details.
- *
- * You should have received a copy of the GNU Lesser General Public License
- * along with this library; if not, write to the Free Software Foundation,
- * Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307 USA.
- *
- * Contact information: Zmanda Inc., 505 N Mathlida Ave, Suite 120
- * Sunnyvale, CA 94085, USA, or: http://www.zmanda.com
- */
-
-%module "Amanda::Tapefile"
-%include "amglue/amglue.swg"
-%include "exception.i"
-
-%{
-#include <glib.h>
-#include "tapefile.h"
-%}
-
-/* This is just a hack to get Amanda::Logfile working! */
-
-int read_tapelist(char *tapefile);
